tests/TypingSpec/invalid/prog/recursive-alias.algst
type Recursive (t:TU) = Recursive (t, Recursive t)

type A = B
type B = A
